<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Nautilus</string>
    <string name="txtMenuTitle">Interesting points</string>
    <string name="btnEntry">Entry</string>
    <string name="btnExit">Exit</string>
    <string name="btnTalk">Read aloud</string>
    <string name="cardTitle1">Introduction</string>
    <string name="cardTitle2">Cliffs</string>
    <string name="cardTitle3">Cala Pedrosa</string>
    <string name="cardTitle4">Foradada</string>
    <string name="cardTitle5">Three coves</string>
    <string name="cardTitle6">Montgó</string>
    <string name="cardTitle7">L\'Escala</string>
    <string name="cardTitle8">Empúries</string>
    <string name="cardTitle9">Emerged Medes</string>
    <string name="cardTitle10">Submerged Medes</string>
    <string name="cardTitle11">Closing</string>
    <string name="cardTitle">Credits</string>
    <string name="cardDescription1">We leave behind the dock of the port of I\'Estartit and head towards the Natural Reserve of the Medes Islands. Open your eyes wide and look at the beauty of the surroundings, an exceptional sample of the typically Mediterranean landscape. You will be able to see that this natural park, created in 2010 by the Generalitat of Catalonia, has very valuable marine and terrestrial biodiversity and a surprising geological heritage, rich in shapes, textures and colors, and which gives its name to the Costa Brava. Surely you did not know that Montgrí is an area with one of the oldest settlements in Catalonia. Since prehistory, people have lived by exploiting resources, transforming and shaping the landscape. But, despite the human impact over thousands of years, it maintains a pristine state that gives it a unique appeal. For this reason, maintaining its natural state is up to all of us!</string>
    <string name="cardDescription2">We look towards the land, towards the cliffs, surely this image will remain engraved in our memory forever. These spectacular and captivating cliffs provoke an acute sensation of vertigo. There are 10 kilometers of steep and vertical coastline from Cap de la Barra, in l\'Estartit, and Cala Montgó, on the border with the municipality of l\'Escala. Its bare walls, more than 100 meters high, fall vertically onto the seabed up to 50 meters deep. This geological heritage, almost unique in Catalonia, encompasses an overwhelming coast, rich and full of contrasts, with coves, capes, gulfs, islets and caves, habitat of flora and fauna adapted to these salubrious environments. This is 100% Costa Brava.</string>
    <string name="cardDescription3">We arrive at Cala Pedrosa. The waters of the torrent coming down from the mountains opened this crack in the cliffs to create a solitary beach in a wild environment. We are in the very center of Montgrí. Pedrosa is one of the wildest coves on the entire Costa Brava; These are solitary, almost magical places, accessible only on foot along the path that runs along the coast, or by boat. The name Pedrosa cove is inspired by all the stones that cover the bottom of the crystal clear waters. If we look closely, we can see different types of fish. The cove is protected by small rocks and the islet of the same name. The tranquility that is breathed in this corner facilitates the presence of nesting birds, some of great ecological value, such as the silver gavian, the sea crow and the storm bird.</string>
    <string name="cardDescription4">The Montgrí massif represents a clear example of the capricious effects of erosion on the rock. The wind and waves are responsible for these impossible architectures and striking shapes, a spectacular vision that can be enjoyed from the sea or from land. Let\'s look at this archway, known as Foradada, a natural tunnel 40 meters long, 11 meters high and 5 meters wide, excavated in the rock by erosion over millions of years. If we sailed by kayak or in a small boat we could cross it without a problem. But it won\'t last forever. Over time, the roof of this gallery will end up falling off and the tip of Cap Castell, where the Foradada is located, will form a new islet, just as the one that linked the mainland with the current Medes Islands fell off.</string>
    <string name="cardDescription5">The Montgrí massif is characterized by its large number of caves. Some of them, such as the Cau del Duc in Torroella de Montgrí, served as a refuge for the first settlers, 300,000 years ago. In the coastal section there are more than twenty underwater caves. Now we are approaching the Three Coves area, in Cala Viuda. The openings in the rock give entrance to a system of underwater galleries, connected to each other and to the outside, with a maximum depth of 20 meters. Those that are above sea level contain chambers of breathable air inside. The colors, the extremely beautiful rock shapes and the diversity of its fauna are the attraction of many divers. It is necessary to remember that these and other sea caves were used as a hiding place for smuggled goods. The proximity to the French border led to the illegal trafficking of salt, alcohol, tobacco or medicines, especially in times of war.</string>
    <string name="cardDescription6">We enter Cala Montgó. We are on the border between the municipalities of Torroella de Montgrí and l\'Escala. It is dominated by the tip of Mila, which we have left behind, and the tip of Trencabracos, already in the area of l\'Escala. We are in a bay almost a kilometer in diameter that has historically been used as a natural port and as a fishing area. It has a seabed of great ecological value. As you can see, they are covered with Posidonia oceanica meadows, a marine plant that preserves rich biodiversity and protects the sand on the beaches from storms. The human footprint on the territory is much more evident here and contrasts with the natural state of Montgrí. At this point, in a northerly direction, an urbanized sector extends to the municipality of l\'Escala. Also look at the anti-piracy watchtower that stands at the end of the cove. Built in 1598, it was used to detect dangerous ships and protect the population. Currently it is a legacy of the rich maritime and fishing heritage of this area and an excellent viewpoint of the Natural Park and the Bay of Roses. We encourage you to visit it!</string>
    <string name="cardDescription7">We approach the center of l\'Escala. Have you already tried their famous anchovies? It is a tasty product, an exceptional typically Mediterranean appetizer. In fact, l\'Escala, as a town, was born thanks to fishing in the 16th century. It was a small fishing neighborhood dedicated to blue fish. The waters of this entire bay were rich in anchovies, sardines and mackerel. Over time, fishing has decreased, and the town has become an eminently tourist destination. It still preserves the seafaring essence of the past and a rich fishing heritage. Due to its old town, you can breathe an intense atmosphere of fishing and the sea, inspiration for many writers, such as Víctor Catala and Josep Pla. The boat beach, as it is known by the residents of the old town of l\'Escala, is protected by the unique Caracol rock. In September, the traditional Salt Festival is celebrated, which commemorates and honors the fishing and salting origins of this municipality.</string>
    <string name="cardDescription8" tools:ignore="TypographyEllipsis">We arrive at Sant Martí d\'Empúries, a place with a thousand-year-old history. This specific point was the gateway for the Greeks and Romans to the Iberian Peninsula. As we can see, the remains of the old port from the Greek period show that this was a mainly commercial enclave that exported goods to the entire Mediterranean. Beyond, a spectacular site extends that is explained in the Empúries Archeology Museum, a must-see stop to learn about the history of the most remote Emporda. At this point, if we look north, we will have an exceptional view of the Emporda plain, soft, fertile and welcoming. Its sky is even more radiant when the north wind blows. Here begins the long beach, 17 km long, which connects with the Aiguamolls de l\'Emporda Natural Park and the municipality of Roses. Look! In the background the Pyrenees mountain range dominates, with the Canigó in the foreground, a peak of 2,784 m. From there... we return to the Medes.</string>
    <string name="cardDescription9">The Medes Islands have been a Comprehensive Nature Reserve since the 90s. They are 21.5 hectares long and the emerged part is made up of seven islets: Meda Gran, Meda Petita, Tascons grossos and petits, Carall Bernat, Medallot and Ferrenelles. This rock group separated from the mainland many millions of years ago to create a very characteristic biotope. Las Medes stands out for its natural values and its diversity of environments. Its vegetation is adapted to an extreme environment, hit by wind and high salinity. It is also a refuge for numerous species of birds, such as the gavian, the sea crow and the swift. These islands have been very important from a historical point of view due to their strategic location. 500 years ago, African pirates who devastated the Mediterranean used the Medes as a regular hideout. They also served as a base for military operations and were the scene of many naval battles. Currently, the Meda Gran lighthouse is the only Catalan lighthouse located on an island, 86 meters above sea level.</string>
    <string name="cardDescription10">On the seabed of the Medes Islands it seems that time stops. Enjoy this wild and primeval environment, protected by the most spectacular comprehensive marine reserve in the western Mediterranean. Behold a varied and abundant underwater ecosystem, with more than 27 types of habitats. The vertical walls covered with coralline communities stand out: algae, gorgonians, sponges, urchins and starfish. The numerous caves that cross these islands are home to the famous and precious red coral, a species that grows only 3 millimeters a year. On sandy bottoms, Posidonia meadows provide shelter to a wide variety of fish, mollusks and cetaceans. Take advantage and visit the glass bottom. You will identify fish such as the emblematic Medes grouper, sea bass, bream, mullet, cuttlefish, nacres and hundreds of other species in their habitat.</string>
    <string name="cardDescription11">We arrive at port. This adventure with Nautilus ends here. We hope you have enjoyed this nautical experience and that we see each other again soon. We encourage you to share it on social networks. For us it is important that you help us disseminate the geological, biological and landscape values of this natural environment, which we want to conserve and transmit to future generations. Remember that the sea is changeable and can always surprise us. With your departure you have become part of the history of the Montgrí, Medes Islands and Baix Ter natural park, a space that appreciates your responsibility and commitment to the preservation of the environment. But l\'Estartit does not end here, it offers you a wide range of possibilities, exciting activities and recreational experiences for the whole family. L\'Estartit awaits you!</string>
    <string name="cardDescription">Original App: Nautilus Adventure (Currently on the Play Store)     This version was created by Sasha Domínguez.     Thanks to my teacher Javi for all the explanations needed to create this reproduction of the app and for being so patient with us.     Do you like this reproduction? You can find the code for this app on GitHub by scanning the QR code or going to this address: https://github.com/Sulig/Nautilus.     Thank you very much!</string>
    <string name="altLogo">Logo Nautilus</string>
    <string name="tts1">Device language not directly supported, using Spanish by default</string>
    <string name="tts2">The speech engine is not ready or the language is not supported.</string>
</resources>