<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/txtMenuTitle"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/titlefontcolor"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/menuScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero1p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle1"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero2p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle2"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero3p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle3"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero4p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle4"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero5p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle5"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero6p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle6"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero7p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle7"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero8p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle8"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero9p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle9"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn10"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero10p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle10"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btn11"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/numero11p"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle11"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/btnCredits"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:backgroundTint="@color/buttoncolor"
                android:drawableLeft="@drawable/arrow_forward"
                android:drawableRight="@drawable/arrow_forward"
                android:drawingCacheQuality="auto"
                android:fontFamily="sans-serif"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/cardTitle"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:typeface="normal"
                app:cornerRadius="8dp"
                app:iconPadding="8dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imgFish1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:translationX="0dp"
        android:translationY="60dp"
        android:translationZ="5dp"
        app:srcCompat="@drawable/pez1"
        tools:layout_editor_absoluteX="-69dp"
        tools:layout_editor_absoluteY="184dp" />

    <ImageView
        android:id="@+id/imgFish2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:translationX="0dp"
        android:translationZ="5dp"
        app:srcCompat="@drawable/pez3"
        tools:layout_editor_absoluteX="-69dp"
        tools:layout_editor_absoluteY="456dp" />

    <ImageView
        android:id="@+id/imgFish3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationX="-70dp"
        android:translationY="0dp"
        android:translationZ="5dp"
        app:srcCompat="@drawable/pez2"
        tools:layout_editor_absoluteX="361dp"
        tools:layout_editor_absoluteY="680dp" />
</androidx.constraintlayout.widget.ConstraintLayout>